refactor: make controller runtime state authoritative